k8s/glance/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: glance
spec:
  parentRefs:
    - name: internal-gateway
      namespace: default
  hostnames:
    - "home.local.fresh96jwjw.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: glance
          port: 8080
